# ChangeLog for games-fps/brutal-doom
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*brutal-doom-0.16b (22 Jun 2012)

  22 Jun 2012; Azamat H. Hackimov <azamat.hackimov@gmail.com>
  -brutal-doom-0.15a.ebuild, +brutal-doom-0.16b.ebuild:
  New version 0.16b, EAPI=4

*brutal-doom-0.15a (23 Apr 2012)

  23 Apr 2012; Azamat H. Hackimov <azamat.hackimov@gmail.com>
  +brutal-doom-0.15a.ebuild, +metadata.xml:
  A mod that attempts to make Doom faster placed, harder,
  gorier and more violent.
