@@ -1,21 +1,11 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST brutalgzdoomv016b.zip 17698843 SHA256 060c825a1a562c232fae16db2c9909411ea0abfaa205cfe198e3910beadeb241
+DIST brutalv018a.zip 17850866 SHA256 bab77521d5169b73d8731752f584f96fa10e79d0c560eef97716921d7e481e7f SHA512 c940afc94317937b9b91da071440053d426b82a43d9f756aa2b3c899d7e966da06cc2d4226258f5b074ea2da780043a5cecfa2e0ba9e21d4c0aee14d282e8d60 WHIRLPOOL c90b1ccb5d9bf2ff20916da51a8a35f5e36d8d4fe7dbfab555f7b4ae23fd946d05c2ca365ddc215e4c28d76efd13e91ac1719c55dece7e19bfe8f8a1f2cbc0c4
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCAAGBQJQlghfAAoJECZQPTSbOzNLBx0QAJBsNbtLsnwXxHPK/4+6HJjK
-DrW6F3YPQef3UP/hZjl/CwkNLvSUkmrKiadD/32OB2P2YzP6MeVm0Ccn2lIxMMpf
-xGAaykHWK/0+CUb4r7foVuKlWvCvfGOA41SjzObYwcbgLaX45SRkmZH2Oz+/hl7V
-D8hz8v3+RUB/heI6A+SHeZv7lXYJ4Lw1RmaPuk7gt4qqmWXXq8Xngp3pJ9H5jti0
-ozAlFecKzqLzNeiu31VJXfg5dBdl8wVPTH1GTElhijH4IZ+UzFQHMYbZZXOJ5Ndw
-QbU91ttuoyyLGj0zWFmjgEG8nUqgb0Qb+EFY41pTxjE91asXQEylWnv/IRWDdZTr
-EUoewi0avu9vVtPrPfC5H0tZ9wsusOnhzpNS6w3mPKtKvAN6hwmFTqkCJuTPsSX0
-zpUmkr9eCsw12+Cbv2Gsd1wJjJkGXO3JEG1frNClmZe5vy2OU/vrl0Q5ZIThJ6t8
-V7GxuqKZac8gv/muk/bLtDFORjSZ0plZkL+9R1R2lRCb1s4j+pDqfLs1dTSj1JwT
-hwSRSNNGFaFpCLJxqNpRSaeoEtnf6yyW4EKBqicO20WgvE09K1+ENdODIXtW6TIt
-6Wc55RT4quV6TtkDCbiHJ4YjrWaobGSsEqAwVQWHu0Y8E6n6FctKeI+KuKbhRTcH
-S97lOe5RYLagUNmlOPeW
-=GKz4
+iF4EAREIAAYFAlF0Mg8ACgkQz+A7F6AY3ozpCAEAll6LC838QoekxzEdIOD1lz3A
+XikwFzeb1ucUT7MDhiEA/1ZH4qNlj6tji4rPUJxQoyU+Lgm7WSURPW/GSlt6PRtl
+=ZPBg
 -----END PGP SIGNATURE-----
