@@ -1,15 +1,15 @@
-# Copyright 1999-2012 Gentoo Foundation
+# Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
-EAPI=4
+EAPI=5
 
 inherit games
 MY_PV=${PV/./}
 
 DESCRIPTION="A mod that attempts to make Doom faster placed, harder, gorier and more violent."
-HOMEPAGE="http://wadhost.fathax.com/download.php?view.20"
-SRC_URI="http://wadhost.fathax.com/e107_files/downloads/brutalgzdoomv${MY_PV}.zip"
+HOMEPAGE="http://www.moddb.com/mods/brutal-doom/"
+SRC_URI="http://www.moddb.com/downloads/mirror/51150/98/09811e55e4b436312ae8a92d83c286de -> brutalv${MY_PV}.zip"
 
 LICENSE="as-is"
 SLOT="0"
@@ -17,15 +17,15 @@ KEYWORDS="~amd64 ~x86"
 # TODO Add USEs for zdoom and skulltag
 IUSE=""
 
-RDEPEND="games-fps/zdoom"
+RDEPEND="=games-fps/zdoom-9999"
 DEPEND="app-arch/unzip"
 
 S="${WORKDIR}"
 
 src_install() {
 	insinto "${GAMES_DATADIR}/doom-data"
-	doins brutalgzdoomv${MY_PV}.pk3
-	dodoc "BrutalDoom Changelog.txt"
+	doins brutalv${MY_PV}.pk3
+	dodoc "brutalv${MY_PV} changelog.txt"
 	prepgamesdirs
 }
 
@@ -33,6 +33,6 @@ pkg_postinst() {
 	games_pkg_postinst
 	echo
 	elog "In order to play this mod run zdoom with -file option:"
-	elog "    zdoom -file ${GAMES_DATADIR}/doom-data/brutalgzdoomv${MY_PV}.pk3"
+	elog "    zdoom -file ${GAMES_DATADIR}/doom-data/brutalv${MY_PV}.pk3"
 	echo
 }
