@@ -1,6 +1,12 @@
 # ChangeLog for games-fps/brutal-doom
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*brutal-doom-0.18a (21 Apr 2013)
+
+  21 Apr 2013; Azamat H. Hackimov <azamat.hackimov@gmail.com>
+  +brutal-doom-0.18a.ebuild, -brutal-doom-0.16b.ebuild:
+  [games-fps/brutal-doom] New version 0.18a.
 
 *brutal-doom-0.16b (22 Jun 2012)
 
@@ -14,4 +20,3 @@
   +brutal-doom-0.15a.ebuild, +metadata.xml:
   A mod that attempts to make Doom faster placed, harder,
   gorier and more violent.
-
